--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "test": "node test/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pepebecker/pinyin-or-hanzi.git"
+  },
   "author": "Pepe Becker <mail@pepebecker.com> (http://pepebecker.com)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pepebecker/pinyin-or-hanzi/issues"
+  },
+  "homepage": "https://github.com/pepebecker/pinyin-or-hanzi#readme",
   "dependencies": {
     "find-hanzi": "git+https://git@github.com/pepebecker/find-hanzi.git",
     "pinyin-utils": "git+https://git@github.com/pepebecker/pinyin-utils.git",
