--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pepebecker/pinyin-or-hanzi.git"
+    "url": "https://github.com/pepebecker/pinyin-or-hanzi.git"
   },
   "author": "Pepe Becker <mail@pepebecker.com> (http://pepebecker.com)",
   "license": "ISC",
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/pepebecker/pinyin-or-hanzi#readme",
   "dependencies": {
-    "find-hanzi": "git+https://github.com/pepebecker/find-hanzi.git",
-    "pinyin-utils": "git+https://github.com/pepebecker/pinyin-utils.git",
+    "find-hanzi": "pepebecker/find-hanzi",
+    "pinyin-utils": "pepebecker/pinyin-utils",
     "so": "^1.0.1"
   },
   "devDependencies": {
