--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/pepebecker/pinyin-or-hanzi#readme",
   "dependencies": {
     "find-hanzi": "pepebecker/find-hanzi",
-    "pinyin-utils": "pepebecker/pinyin-utils"
+    "pinyin-utils": "pepebecker/pinyin-utils",
+    "so": "^1.0.1"
   },
   "devDependencies": {
     "mocha": "^3.3.0",
