--- a/package.json
+++ b/package.json
@@ -21,18 +21,14 @@
     "url": "https://github.com/pepebecker/pinyin-or-hanzi.git"
   },
   "scripts": {
-    "cover": "istanbul cover _mocha",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "test": "mocha"
   },
   "dependencies": {
-    "pinyin-utils": "^1.0.8"
+    "pinyin-utils": "^1.0.8",
+    "zhuyin": "^1.4.0"
   },
   "devDependencies": {
-    "coveralls": "^3.0.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.0.1",
-    "mocha-lcov-reporter": "^1.3.0",
+    "mocha": "^5.1.1",
     "should": "^13.2.1"
   }
 }
